--- a/css/pc.css
+++ b/css/pc.css
@@ -1,116 +1,150 @@
 * {
-    padding: 0;
-    margin: 0;
-    font-family: 'Work Sans', sans-serif;
-  }
-  
-  /* general css */
-  html,
-  body a {
-    text-decoration: none !important;
-  }
-  .no-mr {
-    margin: 0 !important;
-  }
-  .no-pd {
-    padding: 0 !important;
-  }
-  .bg-black {
-    background-color: black;
-  }
-  .bg-brown {
-    background-color: #121212;
-  }
-  /* luan custom header */
-  navbar-toggler-icon {
-    color: white !important;
-  }
-  .custom-header ul {
-    text-align: right;
-  }
-  .custom-header ul li a {
-    color: white !important;
-    font-size: 1.2rem;
-    margin: 0 10px;
-  }
-  .custom-header a span {
-    color: #eebf0d;
-    font-weight: bold;
-    font-size: 1.5rem;
-    margin: 0 5px !important;
-  }
-  .custom-header .logo-header {
-    width: 20%;
-    height: auto;
-    transform: translateX(100px);
-  }
-  
-  /* footer */
-  .bg-footer {
-    width: 100%;
-    height: auto;
-    background-image: url('../img/background-footer.jpg');
-    background-size: cover;
-    background-repeat: no-repeat;
-  }
-  .custom-footer {
-    line-height: 1.7;
-  }
-  .custom-footer h5 {
-    color: white;
-    font-size: 1.4rem;
-    font-weight: bold;
-  }
-  .custom-footer a {
-    color: white;
-    font-size: 1.1rem;
-  }
-  .custom-social a {
-    font-size: 1.7rem;
-    margin: 0 10px;
-    color: #eebf0d;
-  }
-  .custom-social p {
-    font-size: 1.2rem;
-  }
-  .footer-under h3 {
-    padding: 10px 0 5px 0;
-    text-align: center;
-  }
-  .footer-under h3 {
-    color: white;
-    font-size: 1.2rem;
-  }
-  /* partnership */
-  .title-partner{
-      font-weight: bold;
-  }
-  .button-partner{
-      width: 100%;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-  }
-  .element-button-partner-container{
-      width:14rem;
-      height:4rem;
-      padding:1rem 2.5rem 1rem 2.5rem;
-      border-radius: 27px;
-      color:black;
-      background-color: white;
-      -webkit-box-shadow: 2px 2px 3px 6px #ccc;
-      -moz-box-shadow:    2px 2px 5px 6px #ccc; 
-      box-shadow:         2px 2px 5px 6px #ccc; 
-      font-size: 1.1rem;  
-  }
-  .element-button-partner-container:hover{
-      text-decoration: none;
-      background-color: black;
-      color: yellow;
-      transition: linear 0.3s;
-  }
-  .element-button-partner-container-inner{
-      display: flex;
-      justify-content: space-around;
-      align-items: center;
-  }
+  padding: 0;
+  margin: 0;
+  font-family: 'Work Sans', sans-serif;
+}
+
+/* general css */
+html,
+body a {
+  text-decoration: none !important;
+}
+.no-mr {
+  margin: 0 !important;
+}
+.no-pd {
+  padding: 0 !important;
+}
+.bg-black {
+  background-color: black;
+}
+.bg-brown {
+  background-color: #121212;
+}
+/* luan custom header */
+navbar-toggler-icon {
+  color: white !important;
+}
+.custom-header ul {
+  text-align: right;
+}
+.custom-header ul li a {
+  color: white;
+  font-size: 1.2rem;
+  margin: 0 10px;
+}
+.custom-header a span {
+  color: #eebf0d;
+  font-weight: bold;
+  font-size: 1.5rem;
+  margin: 0 5px !important;
+}
+.custom-header .logo-header {
+  width: 20%;
+  height: auto;
+  transform: translateX(100px);
+}
+
+/* footer */
+.bg-footer {
+  width: 100%;
+  height: auto;
+  background-image: url('../img/background-footer.jpg');
+  background-size: cover;
+  background-repeat: no-repeat;
+}
+.custom-footer {
+  line-height: 1.7;
+}
+.custom-footer h5 {
+  color: white;
+  font-size: 1.4rem;
+  font-weight: bold;
+}
+.custom-footer a {
+  color: white;
+  font-size: 1.1rem;
+}
+.custom-social a {
+  font-size: 1.7rem;
+  margin: 0 10px;
+  color: #eebf0d;
+}
+.custom-social p {
+  font-size: 1.2rem;
+}
+.footer-under h3 {
+  padding: 10px 0 5px 0;
+  text-align: center;
+}
+.footer-under h3 {
+  color: white;
+  font-size: 1.2rem;
+}
+.leadia-science-wallet img {
+  width: 40px;
+  height: 40px;
+  border-radius: 200px;
+  float: left;
+  margin-right: 20px;
+}
+.leadia-science-wallet p {
+  font-size: 0.8rem;
+  color: white;
+}
+.leadia-science-wallet {
+  background-color: #bcbb81;
+  transition: 0.6s;
+  display: inline-block;
+  width: 300px;
+  border-radius: 10px 10px 0px 0px;
+  padding: 10px;
+  position: fixed;
+  right: 2%;
+  bottom: 0px;
+  opacity: 0.9;
+}
+.leadia-science-wallet:hover {
+  background-color: #bcbb81;
+  transition: 0.6s;
+  opacity: 1;
+  transform: translateY(-2px);
+}
+/* end footer */
+/* partnership */
+.title-partner {
+  font-weight: bold;
+}
+.button-partner {
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.element-button-partner-container {
+  width: 14rem;
+  height: 4rem;
+  padding: 1rem 2.5rem 1rem 2.5rem;
+  border-radius: 27px;
+  color: black;
+  background-color: white;
+  -webkit-box-shadow: 2px 2px 3px 6px #ccc;
+  -moz-box-shadow: 2px 2px 5px 6px #ccc;
+  box-shadow: 2px 2px 5px 6px #ccc;
+  font-size: 1.1rem;
+}
+.element-button-partner-container:hover {
+  text-decoration: none;
+  background-color: black;
+  color: yellow;
+  transition: linear 0.3s;
+}
+.element-button-partner-container-inner {
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+}
+.active-menu a {
+  color: #eebf0d !important;
+}
+/* animation */
