--- a/css/pc.css
+++ b/css/pc.css
@@ -473,7 +473,9 @@ navbar-toggler-icon {
   color: #eebf0d;
 }
 
-
+.container-box-services :hover {
+  box-shadow: #CCCCCC 1px 1px 8px 2px; 
+}
 /* ???? services-1 ??? */
 .container-box-services-1 {
   width: 25%;
