--- a/css/pc.css
+++ b/css/pc.css
@@ -454,18 +454,20 @@ navbar-toggler-icon {
   text-align: center;
   position: absolute;
   color: white;
-  top: 33%;
-  left: 35%;
+  top: 24%;
+  left: 38%;
 }
 .wrap-content-contacts{
   width:100%;
   display:flex;
+  position:relative;
 }
 .container-content-contacts-1{
 width:60%;
 }
 .container-content-contacts-2{
   width:40%;
+  margin-top:-5%;
 }
 .container-content-contacts-1 > p{
   font-size:1.2rem;
