--- a/css/mobile.css
+++ b/css/mobile.css
@@ -86,3 +86,10 @@
     box-shadow: 4px 2px 8px 0 rgba(0, 0, 0, 0.41);
     font-size: 1.1rem;
 }
+.btn-feedbacks{
+    font-size: 0.7rem;
+}.
+
+.elementor-services {
+    width: 100%;
+}
