--- a/css/mobile.css
+++ b/css/mobile.css
@@ -87,7 +87,7 @@
     font-size: 1.1rem;
 }
 .btn-feedbacks{
-    font-size: 0.7rem;
+    font-size: 0.5rem !important;
 }.
 
 .elementor-services {
