--- a/css/pc.css
+++ b/css/pc.css
@@ -144,23 +144,25 @@ navbar-toggler-icon {
   justify-content: space-around;
   align-items: center;
 }
-.form-partner{
-  display:flex;
+.form-partner {
+  display: flex;
   justify-content: center;
   flex-direction: column;
 }
-.name,.email,.telegram{
-  padding:1rem;
-  border:none;
+.name,
+.email,
+.telegram {
+  padding: 1rem;
+  border: none;
   outline: none;
-  border-bottom: 1px solid #E3E3E3;
+  border-bottom: 1px solid #e3e3e3;
 }
-.close{
+.close {
   display: flex;
   justify-content: flex-end;
 }
-.modal-header{
-  border:none;
+.modal-header {
+  border: none;
 }
 .active-menu a {
   color: #eebf0d !important;
@@ -437,6 +439,7 @@ navbar-toggler-icon {
 .wrap-contacts {
   width: 100%;
   height: 100%;
+  position: relative;
 }
 .background-header {
   background-image: url('../img/background-header.jpg');
@@ -444,7 +447,7 @@ navbar-toggler-icon {
   background-repeat: no-repeat;
   background-size: cover;
   background-color: #fff;
-  height: 15rem;
+  height: 12rem;
   filter: brightness(20%);
 }
 .title-contacts {
@@ -454,26 +457,26 @@ navbar-toggler-icon {
   text-align: center;
   position: absolute;
   color: white;
-  top: 24%;
+  top: 45%;
   left: 38%;
 }
-.wrap-content-contacts{
-  width:100%;
-  display:flex;
-  position:relative;
+.wrap-content-contacts {
+  width: 100%;
+  display: flex;
+  position: relative;
 }
-.container-content-contacts-1{
-width:60%;
+.container-content-contacts-1 {
+  width: 60%;
 }
-.container-content-contacts-2{
-  width:40%;
-  margin-top:-5%;
+.container-content-contacts-2 {
+  width: 40%;
+  margin-top: -5%;
 }
-.container-content-contacts-1 > p{
-  font-size:1.2rem;
+.container-content-contacts-1 > p {
+  font-size: 1.2rem;
 }
-.container-content-contacts-child{
-  width:100%;
+.container-content-contacts-child {
+  width: 100%;
   background-color: white;
   box-shadow: 4px 2px 8px 0 rgba(0, 0, 0, 0.41);
   border-radius: 10px;
@@ -494,35 +497,35 @@ width:60%;
   color: yellow;
   transition: linear 0.3s;
 }
-.element-form-contacts{
+.element-form-contacts {
   display: flex;
   flex-direction: column;
-  width:100%;
+  width: 100%;
 }
-.element-field-label{
+.element-field-label {
   cursor: pointer;
   font-weight: bold;
 }
-.form-contacts{
-  padding:1rem;
+.form-contacts {
+  padding: 1rem;
 }
-.element-field{
-  padding:1.2rem;
-  border:1px solid #E0E0E0;
+.element-field {
+  padding: 1.2rem;
+  border: 1px solid #e0e0e0;
   outline: none;
 }
-.button-contacts-group{
+.button-contacts-group {
   display: flex;
   justify-content: center;
   align-items: center;
 }
-.button-contacts-request{
-  width:80%;
+.button-contacts-request {
+  width: 80%;
   outline: none;
   border: none;
-  background-color:#E8A60C;
-  color:white;
-  padding:1.2rem;
+  background-color: #e8a60c;
+  color: white;
+  padding: 1.2rem;
   border-radius: 27px;
   font-size: 1.2rem;
 }
@@ -791,7 +794,7 @@ h3.titel-body-victor {
 }
 .elementor-vitor .button-victor-services a {
   font-size: 1.2rem;
-  padding:1.2rem;
+  padding: 1.2rem;
 }
 .elementor-vitor {
   background-color: #bdbdbd;
@@ -886,7 +889,7 @@ h3.titel-body-victor {
 .title-element-1-victor {
   margin-bottom: 50px !important;
 }
-.end-project-card-victor{
+.end-project-card-victor {
   width: 100%;
   display: flex;
   justify-content: center;
@@ -898,7 +901,7 @@ h3.titel-body-victor {
 }
 .end-project-card-victor i {
   margin: 0 10px;
-  color: #A3A3A3;
+  color: #a3a3a3;
   cursor: pointer;
 }
 .content-projects-details-victor {
@@ -936,7 +939,7 @@ h3.titel-body-victor {
   color: yellow !important;
 }
 .arr-pre-victor {
-  color: yellow!important;
+  color: yellow !important;
   position: absolute;
   left: 150px !important;
   bottom: -350px;
@@ -952,11 +955,16 @@ h3.titel-body-victor {
   transition: 0.4s;
 }
 .btn-victor-services-3:hover {
-
   color: yellow;
   background-color: black !important;
 }
 .title-element-1-victor {
   font-size: 2.5rem;
   font-weight: bold;
+}
+.hidden-wrap {
+  display: none;
+}
+.navbar {
+  padding: 0 !important;
 }
