--- a/css/mobile.css
+++ b/css/mobile.css
@@ -89,8 +89,13 @@
 .btn-feedbacks, .btn-services-2{
     font-size: 0.7rem !important;
 }
+.services-2 h2 {
+    white-space: normal;
+    word-break: break-all;
+}
 
 .elementor-services {
-    overflow: hidden;
+    white-space: normal;
+    word-break: break-all;
     width: 100%;
 }
