--- a/css/pc.css
+++ b/css/pc.css
@@ -926,7 +926,7 @@ h3.titel-body-victor {
   margin: 100px 185px;
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
 }
-.slide-victor {
+.container-box-victor {
   position: relative;
 }
 .arr-next-victor {
